--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
         <div class="container">
             <div class="row col-row">
                 <div class="col-3">
+                    <img src="./img/pin.svg" alt="" class="pin">
+                    <div class="card">    
+                        <img src="./img/Grotta2numerata.jpeg" alt="">
+                        <div class="card-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, est.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <img src="./img/pin.svg" alt="" class="pin">
                     <div class="card">
                         <img src="./img/Grotta2numerata.jpeg" alt="">
                         <div class="card-body">
@@ -24,6 +34,7 @@
                     </div>
                 </div>
                 <div class="col-3">
+                    <img src="./img/pin.svg" alt="" class="pin">
                     <div class="card">
                         <img src="./img/Grotta2numerata.jpeg" alt="">
                         <div class="card-body">
@@ -32,6 +43,7 @@
                     </div>
                 </div>
                 <div class="col-3">
+                    <img src="./img/pin.svg" alt="" class="pin">
                     <div class="card">
                         <img src="./img/Grotta2numerata.jpeg" alt="">
                         <div class="card-body">
@@ -40,14 +52,7 @@
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="card">
-                        <img src="./img/Grotta2numerata.jpeg" alt="">
-                        <div class="card-body">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, est.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-3">
+                    <img src="./img/pin.svg" alt="" class="pin">
                     <div class="card">
                         <img src="./img/Grotta2numerata.jpeg" alt="">
                         <div class="card-body">
@@ -56,6 +61,7 @@
                     </div>
                 </div>
                 <div class="col-3 ">
+                    <img src="./img/pin.svg" alt="" class="pin">
                     <div class="card">
                         <img src="./img/Grotta2numerata.jpeg" alt="">
                         <div class="card-body">
