--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
                 
             </div>
         </div>
+        <div class="overlay">
+            <button class="close">Chiudi</button>
+            <img class="overlay-img" src="./img/Grotta2numerata.jpeg" alt="">
+        </div>
     </main>
     
 </body>
